# ruse-of-reuse_workshop

./: .gitignore  README.md  pyproject.toml
notebooks/: method_evaluation.ipynb  method_evaluation_two_methods.ipynb
src/ruse_of_reuse/: __init__.py  __main__.py  evaluation.py  logging.py  preprocessing.py  utils.py  vector_store.py
src/ruse_of_reuse/commands/: __init__.py  download.py  preprocess.py  vectorstore.py
src/ruse_of_reuse/methods/: __init__.py  passim.py  simple_embedding.py
